# ansible-ubuntu-desktop

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  Pipfile  README.md  ansible.cfg  default.config.yml  hosts.yml  installation  justfile  playbook.yml  pre-commit-config.yaml  pyproject.toml  requirements.yml  setup.cfg
.github/workflows/: release.yml
group_vars/all/: vars.yml
group_vars/homeservers/thinkcentre/: vars.yml
group_vars/laptops/xps15/: vars.yml
roles/apps/: desktop.yml  docker.yml  etcher.yml  main.yml  nvidia.yml  snap.yml
roles/apps/tasks/: 1password.yml  android.yml  boostnote.yml  desktop.yml  docker.yml  etcher.yml  github.yml  main.yml  mega.yml  nvidia.yml  snap.yml  zoom.yml
roles/cloud_tools/defaults/: main.yml
roles/cloud_tools/tasks/: aws.yml  azure.yml  cloud_foundry.yml  gcp.yml  main.yml  packer.yml  terraform.yml
roles/common/defaults/: main.yml
roles/common/tasks/: apt-tools.yml  desktop-apps.yml  main.yml  nodenv.yml
roles/containers/tasks/: docker.yml  main.yml  podman.yml
roles/golang/tasks/: apps.yml  main.yml
roles/hardware/tasks/: fingerprint-reader.yml  main.yml  trackpad-gestures.yml
roles/main/tasks/: apt_apps.yml  claude.yml  docker.yml  homeschick.yml  main.yml  python.yml  rsync.yml  rust.yml  uvx.yml  vscode.yml  zed.yml  zsh.yml
roles/node/tasks/: main.yml
roles/python/tasks/: build_dependencies.yml  main.yml  pyenv.yml
roles/rust/default/: vars.yml
roles/rust/tasks/: install.yml  main.yml
roles/shell/tasks/: homeschick.yml  main.yml  nvim.yml  (+1 more)
(+2 files in other folders)
