[project]
name = "ansible-ubuntu-desktop"
version = "0.1.0"
description = "Ansible provisioner for Ubuntu 24 desktop"
authors = [{ name = "Alexandre Savio", email = "alexsavio@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "ansible>=11",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ansible-lint",
]
